fix wrapping

--- a/packages/next-steps/style.module.css
+++ b/packages/next-steps/style.module.css
@@ -170,27 +170,26 @@
 }
 
 .tileHeading {
-  display: flex;
-  align-items: center;
-  gap: var(--wpl-spacing-02);
-}
-
-.tileHeadingText {
-  composes: g-type-display-4 from global;
   margin: 0;
   color: inherit;
 }
 
+.tileHeadingText {
+  composes: g-type-display-4 from global;
+  vertical-align: middle;
+}
+
 .tileBadge {
-  margin: 0;
+  margin: 0 0 0 var(--wpl-spacing-02);
   font-family: var(--font-body);
   font-weight: var(--font-weight-bold);
   font-size: 14px;
   letter-spacing: 0.0125em;
   border-radius: 24px;
-  padding: 0 var(--wpl-spacing-02) 1px;
+  padding: 4px var(--wpl-spacing-02);
   color: var(--background-color);
   background-color: var(--color);
+  vertical-align: middle;
 }
 
 .tileDescription {
